--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -5,22 +5,21 @@ video {
     position: fixed;
     z-index: -1;
 }
-
-image {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: -1;
+.custom-bg{
+    background: url("../images/img-home.jpeg") center center/cover no-repeat;
+    margin-top: 60vh;
+    height: 300vh;
+    width: 100vw;
+    align-items: center;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
 }
 
+
 .hero-container {
-    background: url("/public/images/img-home.jpeg") center center/cover no-repeat;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
@@ -28,16 +27,18 @@ image {
 
 .hero-container > h1 {
     color: #fff;
-    font-size: 100px;
-    margin-top: 100px;
+    font-size: 6vw;
+    margin-top: 30vh;
+    text-align: center;
 }
 
 .hero-container > p {
     margin-top: 8px;
     color: #fff;
-    font-size: 32px;
+    font-size: 2vw;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+    text-align: center;
 }
 
 .hero-btns {
@@ -52,21 +53,14 @@ image {
     margin-left: 4px;
 }
 
-@media screen and (max-width: 960px) {
-    .hero-container > h1 {
-        font-size: 70px;
-        margin-top: -150px;
-    }
-}
-
 @media screen and (max-width: 768px) {
     .hero-container > h1 {
-        font-size: 50px;
-        margin-top: -100px;
+        font-size: 40px;
+        margin-top: 30vh;
     }
 
     .hero-container > p {
-        font-size: 30px;
+        font-size: 15px;
     }
 
     .btn-mobile {
