--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,9 +1,9 @@
-.body{
+.intro-container{
     height: 100vh;
     width: 100%;
     background-color: #000;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     object-fit: contain;
 }
