--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,9 +1,10 @@
 .cards {
     padding: 4rem;
-    background: #fff;
+    background: #0e0b16;
 }
 
 h1 {
+    color: #e7dfdd;
     text-align: center;
 }
 
@@ -30,15 +31,16 @@ h1 {
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
+    background-color: #000000;
 }
 
 .cards__item__link {
     display: flex;
     flex-flow: column;
     width: 100%;
-    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
-    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    box-shadow: 0 6px 25px rgba(155, 155, 255, 0.17);
+    -webkit-filter: drop-shadow(0 6px 25px rgba(155, 155, 255, 0.017));
+    filter: drop-shadow(0 6px 25px rgba(155, 155, 255, 0.017));
     border-radius: 10px;
     overflow: hidden;
     text-decoration: none;
@@ -65,8 +67,8 @@ h1 {
     max-width: calc((100%) - 60px);
     font-size: 12px;
     font-weight: 700;
-    color: #fff;
-    background-color: #1f98f4;
+    color: #e7dfdd;
+    background-color: #4717f6;
     box-sizing: border-box;
 }
 
@@ -94,7 +96,7 @@ h1 {
 }
 
 .cards__item__text {
-    color: #252e48;
+    color: #e7dfdd;
     font-size: 18px;
     line-height: 24px;
 }
