--- a/src/components/pages/home components/HeroSection.css
+++ b/src/components/pages/home components/HeroSection.css
@@ -6,7 +6,7 @@ video {
     z-index: -1;
 }
 .custom-bg{
-    background: url("../../public/images/img-home.jpeg") center center/cover no-repeat;
+    background: url("../../../../public/images/img-home.jpeg") center center/cover no-repeat;
     margin-top: 115vh;
     height: 2000px;
     width: 100vw;
