--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #10101a;
+    background: linear-gradient(100deg, rgb(6, 6, 10) 0%, rgb(16, 16, 20) 100%);
     padding: 0 0 2rem 0;
     display: flex;
     flex-direction: column;
