--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(10deg, rgb(6, 6, 10) 0%, rgb(16, 16, 20) 100%);
     height: 70px;
     display: flex;
     justify-content: center;
@@ -45,6 +45,13 @@
     margin-right: 2rem;
 }
 
+.search-container{
+    display: flex;
+    width: 200px;
+    align-items: center;
+    justify-content: end;
+}
+
 .nav-item {
     height: 70px;
 }
@@ -80,6 +87,7 @@
 }
 
 @media screen and (max-width: 960px) {
+
     .NavbarItems {
         position: relative;
     }
@@ -96,13 +104,16 @@
         transition: all 0.5s ease;
     }
 
-
     .nav-menu.active {
         background: #242222;
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 1;
+    }
+
+    .search-container{
+        display: none;
     }
 
     .nav-links {
