--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -1,5 +1,4 @@
 .dropdown-menu {
-    background: red;
     width: 130px;
     position: absolute;
     top: 70px;
@@ -8,12 +7,12 @@
 }
 
 .dropdown-menu li {
-    background: #1888ff;
+    background: #08182a;
     cursor: pointer;
 }
 
 .dropdown-menu li:hover {
-    background: #5cabff;
+    background: #091e31;
 }
 
 .dropdown-menu.clicked {
