--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(10deg, rgb(6, 6, 10) 0%, rgb(16, 16, 20) 100%);
+    background: rgb(16, 16, 20);
     height: 70px;
     display: flex;
     justify-content: center;
