--- a/src/components/pages/home components/Intro.css
+++ b/src/components/pages/home components/Intro.css
@@ -1,7 +1,7 @@
 .intro-container{
     height: 50vw;
     width: 100%;
-    background-color: #000;
+    background-color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -12,14 +12,14 @@
     margin-top: 0;
     margin-left: 12vw;
     width: 50%;
-    justify-content: center;
+
 }
 
 .text-box > h1 {
     color: #fff;
     font-size: 4vw;
     justify-self: center;
-    background: red;
+
 }
 
 .text-box > text {
@@ -40,7 +40,7 @@
 @media screen and (max-width: 768px) {
     .intro-container{
         width: 100%;
-        background-color: #000;
+        min-height: 250px;
         display: flex;
         flex-direction: column;
         align-items: center;
