--- a/src/components/home/HeroSection.css
+++ b/src/components/home/HeroSection.css
@@ -6,7 +6,7 @@ video {
     z-index: -1;
 }
 .custom-bg{
-    background: url("../../../../public/images/img-home.jpeg") center center/cover no-repeat;
+    background: url("../../../public/images/img-home.jpeg") center center/cover no-repeat;
     margin-top: 70vh;
     height: 2300px;
     width: 100vw;
