--- a/src/components/blog/Article.css
+++ b/src/components/blog/Article.css
@@ -25,7 +25,7 @@
     text-align: center;
     margin-bottom: 20px;
     font-size: 1.2rem;
-    color: #283858;
+    color: #384868;
 }
 
 .article-container article .published-time i{
@@ -55,5 +55,5 @@
 .article-container article blockquote{
     margin: 0 50px;
     line-height: 1.5rem;
-
+    color: #ddd;
 }
