--- a/src/components/blog/Posts.css
+++ b/src/components/blog/Posts.css
@@ -11,6 +11,11 @@
     grid-gap: 20px;
 }
 
+.posts-box:hover{
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 6px 25px rgba(255, 255, 255, 0.15);
+}
+
 .posts-box{
     width: 100%;
     padding: 10px;
@@ -19,8 +24,8 @@
     overflow: hidden;
     cursor: pointer;
     background: #050505;
-    box-shadow: 0 6px 25px rgba(255, 255, 255, 0.15);
 }
+
 
 .posts-img{
     width: 100%;
