--- a/src/components/blog/Article.css
+++ b/src/components/blog/Article.css
@@ -59,10 +59,8 @@
 }
 
 .article-container article .content :is(img, video){
-    width: 60%;
-    height: auto;
     object-fit: fill;
-    margin: 10px 20%;
+    margin: 10px 10px;
     color: white;
 }
 
