--- a/src/components/blog/Article.css
+++ b/src/components/blog/Article.css
@@ -72,30 +72,35 @@
 }
 
 .article-container article h6{
+    font-size: 1.2rem;
     line-height: 2rem;
     margin: 10px;
     color: white;
 }
 
 .article-container article h5{
+    font-size: 1.5rem;
     line-height: 2.2rem;
     margin: 10px;
     color: white;
 }
 
 .article-container article h4{
+    font-size: 1.8rem;
     line-height: 2.5rem;
     margin: 10px;
     color: white;
 }
 
 .article-container article h3{
+    font-size: 2rem;
     line-height: 2.8rem;
     margin: 10px;
     color: white;
 }
 
 .article-container article h2{
+    font-size: 2.2rem;
     line-height: 3rem;
     margin: 10px;
     color: white;
